# symmetrical-broccoli

./: .env.example  .gitignore  LICENSE  README.md  alpha.ipynb  pyproject.toml
report/CS_455_report/: main.aux  main.bbl  main.blg  main.tex  references.bib
rwrt/: __init__.py  cli.py  config.py  encoders.py  index.py  interactive.py  learner.py  llm.py  pipeline.py  query.py  rerank.py  retrieve.py  tui.py  types.py  vocabulary.py
scripts/: build_index.py  chat.py  learn.py  recommend.py  run_all_checks.sh
tests/: conftest.py  test_cli.py  test_config.py  test_index.py  test_interactive.py  test_learner.py  test_llm.py  test_pipeline.py  test_query.py  test_rerank.py  test_retrieve.py  test_tui.py  test_types.py  test_vocabulary.py
