[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "rwrt"
version = "0.1.0"
description = "Right Word at the Right Time — adaptive Turkish vocabulary recommendations"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "faiss-cpu>=1.7.4",
    "httpx>=0.27",
    "numpy>=1.24",
    "python-dotenv>=1.0",
    "rich>=13.0",
    "sentence-transformers>=3.0",
    "torch>=2.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
rwrt-build-index = "rwrt.cli:build_index_main"
rwrt-recommend = "rwrt.cli:recommend_main"
rwrt-learn = "rwrt.cli:learn_main"
rwrt-chat = "rwrt.cli:chat_main"

[tool.setuptools.packages.find]
where = ["."]
include = ["rwrt*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
